--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,8 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+/* header parameter */
+
 .header {
   width: 100%;
   height: 100vh;
@@ -86,10 +88,12 @@
   right: 0px;
 }
 
+
+/* parameter description */
+
 .content {
   margin-top: 100px;
   margin-bottom: 100px;
-  
 }
 
 .description{
@@ -130,6 +134,64 @@
   padding-top: 0px;
   }
 
+.two-columns__span-accent{
+  font-weight: bold;
+}
+
+/* parameter digits */
+
+.digits{
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.section-title{
+  margin: auto;
+  width: 60%;
+  line-height: 69px;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+
+}
+
+.section-subtitle{
+  margin: auto;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 60px;
+}
+
+.table{
+  width: 1100px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 60px;
+}
+
+.table__cell{
+  width: 250px;
+}
+
+.table__heading{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
