--- a/styles/style.css
+++ b/styles/style.css
@@ -203,8 +203,9 @@
 .feynman{
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  padding-top: 100px;
   row-gap: 70px;
+  background-color: #f2f2f2;
 }
 
 .feynman__title{
@@ -244,8 +245,6 @@
 /* parameter kaufman */
 
 .kaufman{
-  /* padding-top: 90px;
-  padding-bottom: 90px; */
   background-color: #1F1F1F;
   overflow: hidden; 
   display: flex;
@@ -254,7 +253,7 @@
   position: relative;
 }
 
-.theme_dark{
+.theme__dark{
   color: #F2F2F2;
 }
 
@@ -280,13 +279,20 @@
   margin-bottom: 80px;
 }
 
+.kaufman__table{
+  margin-top: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 90px;
+}
+
 .kaufman__cell{
   width: 200px;
   row-gap: 80px;
   z-index: 1;
 }
 
-.kaufman_triangle{
+.kaufman__triangle{
   position: absolute;
   width: 660px;
   height: 635px;
@@ -294,9 +300,74 @@
   
 }
 
+/* parameter footer */
+
+.footer{
+  background-color: #1F1F1F;
+  width: 100%;
+  height: 350px;
+}
+
+.footer__text{
+  color: #F2F2F2;
+}
+
+.footer__columns{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  height: -webkit-fill-available;
+  margin-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+  justify-content: space-between;
+}
 
 
+.content__copyright{
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: inherit;
+}
 
+.footer__logo{
+  width: 183px;
+  height: 35px;
+}
+
+.footer__author{
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+
+.column-heading{
+  padding: 0px;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  list-style-type:none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__list{
+  margin-bottom: 0px;
+  padding: 0px;
+  margin-top: 0px;
+  list-style-type:none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.social-icons{
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
