--- a/styles/style.css
+++ b/styles/style.css
@@ -30,8 +30,8 @@
   height: 31px;
   width: 154px;
   z-index: 1;
-  margin-top: 30px;
-  margin-left: 64px;
+  top: 30px;
+  left: 64px;
 }
 
 
@@ -44,8 +44,6 @@
   display: flex;
   flex-wrap: wrap;
   position: absolute;
-  /* align-content: center; */
-  /* justify-content: center; */
   top: 20%;
   
 }
@@ -64,9 +62,10 @@
   margin-left: 64px;
   position: absolute;
   bottom: 0px;
+  color: #2F80ED ;
 }
 
-.header_main-illustrator{
+.header__main-illustrator{
   position: absolute;
   width: 756px;
   height: 608px;
@@ -195,11 +194,13 @@
 /* parameter feyman */
 
 .feynman{
+  position: relative;
   display: flex;
   flex-direction: column;
   padding-top: 100px;
   row-gap: 70px;
   background-color: #f2f2f2;
+  min-height: 790px;
 }
 
 .feynman__title{
@@ -228,12 +229,15 @@
   position: absolute;
   margin-top: 300px;
   right: 48px;
+  color: #2F80ED ;
 }
 
 .feynman__background-image{
   position: absolute;
   width: 867px;
   height: 637px;
+  bottom: 0px;
+  left: 0px;
 }
 
 /* parameter section */
@@ -294,6 +298,7 @@
   height: 635px;
   right: -124px;
   
+  
 }
 
 /* parameter footer */
@@ -301,7 +306,7 @@
 .footer{
   background-color: #1F1F1F;
   width: 100%;
-  height: 350px;
+  min-height: 350px;
 }
 
 .footer__text{
