--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,8 @@
   position: relative;
   background-color: #f2f2f2;
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   
     /* parameters for the header section */
 }
@@ -40,19 +42,16 @@
   margin-left: 64px;
   font-weight: bold;
   font-size: 102px;
-  height: 96px;
   display: flex;
   flex-wrap: wrap;
-  position: absolute;
-  top: 20%;
+  top: 50%;
   
 }
 .header__subtitle{
   margin-left: 64px;
   position: absolute;
-  bottom: 40px;
+  bottom: 30px;
   width: 388px;
-  height: 25px;
   font-size: 18px;
   font-weight: normal;
 
@@ -85,11 +84,9 @@
 
 /* parameter description */
 
-.content {
-  
-}
 
-.description{
+
+.two-columns{
   width: 80%;
   display: flex;
   justify-content: space-between;
@@ -107,6 +104,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 0px;
+  color: #2F80ED;
 }
 
 .two-columns__main-text{
@@ -183,6 +181,7 @@
 /* parameter feyman */
 
 .feynman{
+  box-sizing: border-box;
   position: relative;
   display: flex;
   flex-direction: column;
