--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,14 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 80px;
-  min-height: 80px;
-}
+/* header parameter */
+  
+  .header {
+    width: 100%;
+    height: 100vh;
+    min-height: 600px;
+    max-height: 756px;
+    position: relative;
+    background-color: #f2f2f2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    overflow: hidden;
+  } 
