--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,3 +1,13 @@
-.root {
-  font-family: Helvetica, Arial, sans-serif;
+.page {
+  min-width: 1100px;
+  /* we don't know how to make mobile versions of websites yet, */
+  /* so here we've set a minimum page width */
+  max-width: 1600px;
+  display: flex;
+  flex-wrap: wrap;
+  /* here we've set a maximum page width */
+  /* margin: 0 auto; */
+  /* this ensures that all content is centered on screens wider than 1600px */
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  
 }
