--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,80 @@
+/* vendor */
 @import url(../vendor/normalize.css);
+
+/* blocks */
 @import url(../blocks/root/root.css);
+
+/* header */
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/header/__main-illustrator/header__main-illustrator.css);
+@import url(../blocks/header/__title/header__title.css);
+@import url(../blocks/header/__subtitle/header__subtitle.css);
+@import url(../blocks/header/__square/header__square.css);
+
+/* logo */
+@import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
+@import url(../blocks/logo/_place/logo_place_footer.css);
+
+/* rotation animation*/
+@import url(../blocks/rotation/rotation.css);
+
+/* two-columns */
+@import url(../blocks/two-columns/two-columns.css);
+@import url(../blocks/two-columns/__brief/two-columns__brief.css);
+@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
+@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
+@import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
+
+/* techniques */
+@import url(../blocks/techniques/techniques.css);
+
+/* section-title */
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-subtitle/section-subtitle.css);
+
+/* cards */
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__description/cards__description.css);
+
+/* video */
+@import url(../blocks/video/video.css);
+@import url(../blocks/video/__iframes/__iframes.css);
+
+/* oakley */
+@import url(../blocks/oakley/oakley.css);
+
+/* feynman */
+@import url(../blocks/feynman/feynman.css);
+@import url(../blocks/feynman/__title/feynman__title.css);
+@import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feynman/__link/feynman__link.css);
+@import url(../blocks/feynman/__background-image/feynman__background-image.css);
+
 @import url(../blocks/menu/menu.css);
 @import url(../blocks/menu/__link/menu__link.css);
 @import url(../blocks/content/content.css);
 @import url(../blocks/footer/footer.css);
+@keyframes move_bg {
+    from {
+      background-position: 0 0;
+    }
+  
+    to {
+      background-position: 100px 0;
+    }
+  }
+  
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+  
+    to {
+      transform: rotate(360deg);
+    }
+  }
