--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,8 @@
-.page {
-  min-width: 1100px;
-  /* we don't know how to make mobile versions of websites yet, */
-  /* so here we've set a minimum page width */
-  max-width: 1600px;
-  display: flex;
-  flex-wrap: wrap;
-  /* here we've set a maximum page width */
-  /* margin: 0 auto; */
-  /* this ensures that all content is centered on screens wider than 1600px */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-}
+
+
 
 /* header parameter */
-@keyframes move_bg {
+/* @keyframes move_bg {
   from {
     background-position: 0 0;
   }
@@ -43,9 +33,8 @@
   flex-direction: column;
   justify-content: space-around;
   overflow: hidden;
-  
-    /* parameters for the header section */
 }
+
 
 .logo_place_header{
   position: absolute;
@@ -101,24 +90,23 @@
   right: 0px;
   transform: rotate(45deg);
 }
-
 .rotation{
   animation: rotation 20s linear infinite;
-}
+} */
 
 
 /* parameter description*/
 
-.two-columns{
+/* .two-columns{
   width: 80%;
   display: flex;
   justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
-}
+} */
 
-.two-columns__brief{
+/* .two-columns__brief{
   width: 175px;
   font-size: 18px;
   font-weight: normal;
@@ -127,17 +115,17 @@
   justify-content: space-between;
   margin-top: 0px;
   color: #2F80ED;
-}
+} */
 
-.two-columns__main-text{
+/* .two-columns__main-text{
   display: flex;
   flex-direction: column;
   width: 80%;
   min-width: 784px;
   justify-content: space-around;
-}
+} */
 
-.two-columns__paragraph{
+/* .two-columns__paragraph{
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -148,17 +136,17 @@
 
 .two-columns__span-accent{
   font-weight: bold;
-}
+} */
 
 /* techniques section */
 
-.techniques{
+/* .techniques{
   margin: auto;
   display: flex;
   flex-direction: column;  
-}
+} */
 
-.section-title{
+/* .section-title{
   margin-top: 100px;
   width: 60%;
   line-height: 1.15;
@@ -169,9 +157,9 @@
   margin-right: auto;
   text-align: center;
   z-index: 1;
-}
+} */
 
-.section-subtitle{
+/* .section-subtitle{
   margin: auto;
   line-height: 34px;
   font-size: 24px;
@@ -179,9 +167,9 @@
   width: 60%;
   text-align: center;
   margin-bottom: 0px;
-}
+} */
 
-.cards{
+/* .cards{
   width: 920px;
   margin: auto;
   display: flex;
@@ -221,10 +209,10 @@
   font-size: 18px;
   font-weight: normal;
   text-align: center;
-}
+} */
 
 /* video parameter */
-.video{
+/* .video{
   margin-left: auto;
   margin-right: auto;
   height: 40vh;
@@ -235,17 +223,17 @@
   flex-direction: row;
   column-gap: 20px;
   justify-content: center;
-}
+} */
 
 /* parameter oakley */
-.oakley{
+/* .oakley{
   background-color: #f2f2f2;
   padding-top: 60px;
   padding-bottom: 80px;
-}
+} */
 /* parameter feyman */
 
-.feynman{
+/* .feynman{
   box-sizing: border-box;
   position: relative;
   display: flex;
@@ -291,7 +279,7 @@
   height: 637px;
   bottom: 0px;
   left: 0px;
-}
+} */
 
 /* Digits and kaufman parameter */
 
@@ -494,10 +482,6 @@ color: #2F80ED;
   justify-content: inherit;
 }
 
-.logo{
-  width: 183px;
-  height: 35px;
-}
 
 .footer__author{
   margin-top: 18px;
