--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,8 @@
 .footer{
-    background-color: #1F1F1F;
-    width: 100%;
-    min-height: 350px;
-    padding-top: 60px;
-    padding-bottom: 40px;
-  }
+  box-sizing: border-box;
+  background-color: #1F1F1F;
+  width: 100%;
+  min-height: 350px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
