--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,10 +1,10 @@
 .header__title{
-    width: 730px;
-    margin-left: 64px;
-    font-weight: bold;
-    font-size: 102px;
-    display: flex;
-    flex-wrap: wrap;
-    top: 50%;
-    
-  }
+  z-index: 1;
+  width: 730px;
+  margin-left: 64px;
+  font-weight: bold;
+  font-size: 102px;
+  display: flex;
+  flex-wrap: wrap;
+  top: 50%;
+}
