--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,9 +1,11 @@
 .section-subtitle{
-    margin: auto;
-    line-height: 34px;
-    font-size: 24px;
-    font-weight: normal;
-    width: 60%;
-    text-align: center;
-    margin-bottom: 0px;
-  }
+  position: relative;
+  z-index: 1;
+  margin: auto;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+  text-align: center;
+  margin-bottom: 0px;
+}
